GPS-183 Implementar endpoint de recomendaciones
