# src/main/java/io/swagger/api/OrdersApi.java
@@ -47,11 +47,11 @@ public interface OrdersApi {
         
         @ApiResponse(responseCode = "404", description = "Order not found", content = @Content(mediaType = "application/json", schema = @Schema(implementation = Error.class))),
         
-        @ApiResponse(responseCode = "200", description = "Unexpected error", content = @Content(mediaType = "application/json", schema = @Schema(implementation = Error.class))) })
-    @RequestMapping(value = "/orders",
+        @ApiResponse(responseCode = "500", description = "Unexpected error", content = @Content(mediaType = "application/json", schema = @Schema(implementation = Error.class))) })
+    @RequestMapping(value = "/orders/{id}",
         produces = { "application/json" }, 
         method = RequestMethod.DELETE)
-    ResponseEntity<Order> ordersDelete(@NotNull @Parameter(in = ParameterIn.QUERY, description = "" ,required=true,schema=@Schema()) @Valid @RequestParam(value = "id", required = true) String id
+    ResponseEntity<Order> ordersDelete(@NotNull @Parameter(in = ParameterIn.PATH, description = "" ,required=true,schema=@Schema()) @Valid @PathVariable("id") String id
 );
 
 
